
  * When passing --installed to the test runner, S3QL commands
    are now loaded from $PATH instead of the packages bin/
    directory.

  * The runtest.py script now comes with the correct shebang
    (i.e., it can now be called as "./runtests.py" instead of
    "python3 runtests.py").

  * S3QL now requires the python dugong module
    (https://bitbucket.org/nikratio/python-dugong)
  
2013-12-16, S3QL 2.7

  * Fixed another race condition that could lead to mount.s3ql
    crashing with `ValueError: I/O operation on closed file`.

  * S3QL no longer generates warning messages for the first two times
    that it has to resend a request to the storage backend. If there
    is no success after the second try, messages are emitted as before. 

  * S3QL now stores multiple copies of the master encryption key to
    allow recovery if the backend looses the object holding the
    primary copy. To take advantage of this functionality for existing
    file systems, change the file system passphrase with s3qladm.

  * Fixed problem with automatic cache size detection (mount.s3ql was
    treating bytes as kilobytes). Thanks to GVormayr@gmail.com for the
    patch!

  * Fixed "AttributeError in LegacyDecryptDecompressFilter" crash when
    reading objects written by old S3QL versions.

  * Fixed a problem with umount.s3ql giving a strange error when
    the mountpoint is still in use.

2013-12-03, S3QL 2.6

  * Fixed a problem with mount.s3ql crashing with `KeyError` in
    `collections/abc.py`.

  * Fixed a problem with mount.s3ql crashing with `ValueError: I/O
    operation on closed file`.

  * Fixed a race condition that could lead to data corruption when
    multiple processes trigger download of the same data block
    simultaneously.

  * Fixed a problem with S3QL crashing with "SSLEOFError" when an SSL
    connection is terminated unexpectedly.

  * Increased deduplication performance. Previously, block checksums
    were accidentally computed without parallelism.
